--- a/cv.html
+++ b/cv.html
@@ -25,12 +25,61 @@
 
 <body>
 
-<div class="jumbotron">
-  <h1>WebDeveloppe[se] cherche stage</h1>
-  <img src="asset/img/julie.jpg"width="200" class="img-circle"alt="photo personnelle">
-</div>
+<header role ="main">
+  <div class="row presentation">
+    <div class="col-md-6 col-md-offset-2 text-center"><h1>WebDeveloppe[se] cherche stage</h1></div>
+    <div class="col-md-4">
+  <img src="asset/img/julie.jpg"width="160" class="img-circle center-block img-responsive"alt="photo personnelle"></div>
+</header>
 
-	 <footer role="contentinfo"><p class="navbar-text navbar-fixed-bottom">&copy Julie Alary</p></footer>
+<section role="main" class="row">
+  <article role="complementary" class="col-md-4 formation">
+    <h2>FORMATION</h2>
+    <p class="intitule">2016-2017 : <span>Formation Developper Web</span> [ Ecole Objectif 3W à Montpellier (34) ]</p>
+    <hr/>
+    <p class="intitule">2003-2005 : Niveau <span>DEUG Géographie</span> [ Université Jean Jaurès à Toulouse (31) ]</p>
+    <hr/>
+    <p class="intitule">2003 : Baccalauréat Sciences et Technologies Tertiaires option <span>Action et Communications Commerciales</span> [ Lycée Paul Sabatier à Carcassonne (11) ]</p>
+    <hr/>
+    <p class="intitule">2001 : Le Brevet d'Aptitude aux Fonctions d'Animateur [ Organisme F.A.O.L (11 - 34  - 48) ]</p>
+    <hr/>
+  </article>
+
+
+  <article role="complementary" class="col-md-4 experience">
+    <h2>EXPERIENCES</h2>
+      <h3>2015 : Déléguée Commerciale - Editions Jocatop</h3>
+      <p>Vente directe, Prise de rendez-vous, Phonning, Orgnisation de tournées sur trois départements.</p>
+      <hr/>
+      <h3>2013 - 2015 : Responsable des Ventes - La Croissanterie</h3>
+      <p>Management d'une équipe de 10 vendeurs sur 2 points de vente. Gestion des commandes, livraisons, production, planning, recrutement, formation, caisse, remise en banque.</p>
+      <hr/>
+      <h3>2008 - 2013 : Responsable magasin - Internity</h3>
+      <p>Mangement d'une équipe de 3 vendeurs, vente d'abonnements téléphoniques et d'accessoires téléphoniques et multimédias, réparations d'ordinateurs. Gestion des commandes, plannings, recrutements, caisse, remise en banques, SAV.</p>
+      <hr/>
+      <h3>2006 - 2008 : Manager de la restauration rapide - McDonald's</h3>
+      <p>Management d'une équipe de 20 à 30 personnes. Gestion opérationnelle du terrain, des écarts- rendements, commandes, caisse, formation.</p>
+      <hr/>
+  </article>  
+
+  <article role="complementary" class="col-md-4 hobbies">
+    <h2>DIVERS</h2>
+    <h3>Hobbies</h3>
+      <p>Snowboard</p>
+      <p>Sports en eaux-vives</p>
+      <p>Musique : guitare et djjing</p>
+      <p>Code</p>
+      <p>Voyage</p>
+      <hr/>
+    <h3>Informations Complémentaires</h3>
+      <p>Permis b</p>
+      <p>Anglais et Espagnol - parlé et lu niveau intermédiaire</p>
+      <p>Célibataire, sans enfants</p>
+      <hr/>
+  </article>
+</section>
+
+	 <footer role="contentinfo"><p class="navbar-text">&copy Julie Alary</p></footer>
 </body>
 
 </html>
