--- a/formation.html
+++ b/formation.html
@@ -174,20 +174,21 @@
   </a>
 </div>
 
-    <div class="row">
+    <div class="row arrow_formation">
         <div class="col-md-4 col-md-offset-4 text-center"><a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a></div>
     </div>
 
 </body>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="css/bootstrap/js/bootstrap.min.js"></script>
-<script>
-  $('.carousel').carousel({
-    interval: 3000
-  })
-</script>
+    <script>
+        $('.carousel').carousel({
+            interval: 2500
+        })
+    </script>
 
-   <footer role="contentinfo"><p class="navbar-text navbar-fixed-bottom">&copy Julie Alary</p></footer>
+   <footer role="contentinfo"><p class="navbar-text">&copy Julie Alary</p></footer>
+
 </body>
-
 </html>
