--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name = "viewport" content ="width=device-width, user-scalable=no, initial-scale=1.0" />
     <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css">
-    <link href="css/style.css" rel="stylesheet" media="screen">
-
-    
+    <link href="css/style.css" rel="stylesheet" media="screen">  
 
     <title>"Julie Alary Personal One Page Site"</title>
     <!--[if lt IE 9]>
@@ -105,7 +103,7 @@
         </div>
     </section>
   
-     <footer role="contentinfo"><p class="navbar-text navbar-fixed-bottom">&copy Julie Alary</p></footer>
+     <footer role="contentinfo"><p class="navbar-text">&copy Julie Alary</p></footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
