--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
 
     <section role="main" id="skills">
         <div class="about">
-          <h2> I'm french and I love coding</h2>
-          <h3>I was a trade Manager and I want to be a WebDeveloper</h3>
-          <h4>I'm learning code since January 2016</h4><br/>
-          <p><strong>My skills :</p>
+          <h2>Passionée d'informatique</h2>
+          <h3>J'ai décidé de me reconvertir professionellement</h3>
+          <h4>J'ai commencé en autodidacte et suis maintenant une formation de WebDeveloppeur</h4><br/>
+          <p><strong>Mes compétences :</p>
         </div>
 
         <div class="row">
           <div class="col-xs-6 col-md-6 text-center"><a class="btn btn-default btn-lg" href="cv.html" role="button">Curriculum Vitae</a></div>
-           <div class="col-xs-6 col-md-6 text-center"><a class="btn btn-default btn-lg" href="formation.html" role="button">School's Program</a></div>
+           <div class="col-xs-6 col-md-6 text-center"><a class="btn btn-default btn-lg" href="formation.html" role="button">Programme de la formation</a></div>
         </div>
 
         <div class="row">
