--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,6 @@
         <!-- // Code HTML réservé aux navigateurs autres que IE -->
       <link href="css/style_cv.css" rel="stylesheet" media="screen" type="text/css">
     <!--<[endif]-->
-
      <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -38,7 +37,7 @@
   <div class="row presentation">
     <div class="col-md-6 col-md-offset-2 text-center"><h1>WebDeveloppeu[se] cherche stage</h1></div>
     <div class="col-md-4">
-  <img src="asset/img/julie.jpg"width="160" class="img-circle center-block img-responsive"alt="photo personnelle"></div>
+  <img src="asset/img/julie.jpg"width="160" class="center-block img-responsive img-circle"alt="photo personnelle"></div>
 </header>
 
 <section role="main" class="row">
@@ -89,12 +88,19 @@
   </article>
 </section>
 
-  <div class="col-md-6 col-md-offset-3 text-center"><a class="btn btn-default btn-lg" href="CV_Julie_Alary_2016-2017.pdf" role="button">Télécharger le cv</a></div>
-  <div class="row arrow_cv">
-        <div class="col-md-4 col-md-offset-4 text-center"><a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i><i class="fa fa-home" aria-hidden="true"></i></a></div>
+    <div class="col-md-6 col-md-offset-3 text-center">
+        <a class="btn btn-default btn-lg" href="CV_Julie_Alary_2016-2017.pdf" role="button">Télécharger le cv</a>
+    </div>
+        
+    <div class="row arrow_cv">
+            <div class="col-md-4 col-md-offset-4 text-center">
+                <a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i><i class="fa fa-home" aria-hidden="true"></i></a>
+            </div>
     </div>
 
 	 <footer role="contentinfo"><p class="navbar-text text-center">&copy Julie Alary</p></footer>
-</body>
+
+  
+   </body>
 
 </html>
