--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- -->
-<html>
+<html lang="fr">
   <head>
     <meta charset = "utf-8" />
     <meta name = "viewport" content ="width=device-width, user-scalable=no, initial-scale=1.0" />
@@ -43,14 +43,14 @@
         </div>
     </nav>
 
-    <header role="main" id="jumbotron">
+    <header role="banner" id="jumbotron">
       <h1 class="text-center"><strong>Julie Alary<br/><br/>En Formation Front & Back-end <br/><br/>@ <a href="http://www.objectif3w.com" target="_blank" class="hvr-underline-from-left">Objectif 3W</a></strong></h1>      
     </header>
     
-    <section role="main" id="portfolio"class="container-fluid">
+    <section role="main" id="portfolio" class="container-fluid">
         <div class="row">
             <div class="col-xs-12 col-md-4">
-                <a href="https://codepen.io/Julie31/full/rezxGd/" target "_blank"><img src="asset/img/santigold.jpg" class="img-responsive center-block img-rounded" alt="Minitature du tribute sur Santigold"></a>
+                <a href="https://codepen.io/Julie31/full/rezxGd/" target="_blank"><img src="asset/img/santigold.jpg" class="img-responsive center-block img-rounded" alt="Minitature du tribute sur Santigold"></a>
                 <h4> One page avec Bootstrap (exercice FreeCodeCamp)</h4>
             </div>
             <div class="col-xs-12 col-md-4">
@@ -82,7 +82,7 @@
           <h2>Passionnée d'informatique</h2>
           <h3>J'ai décidé de me reconvertir professionnellement</h3>
           <h4>J'ai commencé en autodidacte et je suis maintenant une formation de WebDeveloppeur</h4><br/>
-          <p><strong>Mes compétences :</p>
+          <p><strong>Mes compétences</p>
         </div>
 
         <div class="row">
@@ -94,7 +94,7 @@
           <div class="col-xs-3 col-md-3"><img src="asset/img/html5.png" class="img-responsive center-block" alt="logo html5"/></div>
           <div class="col-xs-3 col-md-3"><img src="asset/img/css3.png" class="img-responsive center-block" alt="logo css3"/></div>
           <div class="col-xs-3 col-md-3"><img src="asset/img/js.png" class="img-responsive center-block" alt="logo javascript"/></div>
-          <div class="col-xs-3 col-md-3"><img src="asset/img/php.png"class="img-responsive center-block" alt="logo php"/></div>
+          <div class="col-xs-3 col-md-3"><img src="asset/img/php.png" class="img-responsive center-block" alt="logo php"/></div>
         </div>
       <div class="row">
           <div class="col-xs-3 col-md-3"><img src="asset/img/boostrap.png" class="img-responsive center-block boostrap" alt="logo boostrap"/></div>
@@ -134,7 +134,7 @@
         </div>
     </section>
   
-     <footer role="contentinfo"><p class="navbar-text">&copy Julie Alary</p></footer>
+     <footer role="contentinfo"><p class="navbar-text">&ampcopy Julie Alary</p></footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
