--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <h2>Passionnée d'informatique</h2>
           <h3>J'ai décidé de me reconvertir professionnellement</h3>
           <h4>J'ai commencé en autodidacte et je suis maintenant une formation de WebDeveloppeur</h4><br/>
-          <p><strong>Mes compétences</p>
+          <p><strong>Mes compétences :</strong></p>
         </div>
 
         <div class="row">
@@ -104,7 +104,7 @@
         </div>
     </section>
 
-    <section role="main"id="contact">
+    <section role="main" id="contact">
         <div class="title">
             <h2>[Contact me] [Follow me] [fork me] [...]</h2>
         </div>
