--- a/cv.html
+++ b/cv.html
@@ -33,15 +33,19 @@
 
 <body>
 
-<header role ="main">
+<header role ="banner">
   <div class="row presentation">
-    <div class="col-md-6 col-md-offset-2 text-center"><h1>WebDeveloppeu[se] cherche stage</h1></div>
-    <div class="col-md-4">
-  <img src="asset/img/julie.jpg"width="160" class="center-block img-responsive img-circle"alt="photo personnelle"></div>
+      <div class="col-md-6 col-md-offset-2 text-center">
+          <h1>WebDeveloppeu[se] cherche stage</h1>
+      </div>
+      <div class="col-md-4">
+          <img src="asset/img/julie.jpg" width="160" class="center-block img-responsive img-circle" alt="photo personnelle">
+      </div>
+    </div>
 </header>
 
 <section role="main" class="row">
-  <article role="complementary" class="col-xs-12 col-sm-6 col-md-4 formation">
+  <article role="article" class="col-xs-12 col-sm-6 col-md-4 formation">
     <h2>FORMATION</h2>
     <p class="intitule">2016-2017 : <span>Formation Developper Web</span> [ Ecole Objectif 3W à Montpellier (34) ]</p>
     <hr/>
@@ -54,7 +58,7 @@
   </article>
 
 
-  <article role="complementary" class="col-xs-12 col-sm-6 col-md-4 experience">
+  <article role="article" class="col-xs-12 col-sm-6 col-md-4 experience">
     <h2>EXPERIENCES</h2>
       <h3>2015 : Déléguée Commerciale - Editions Jocatop</h3>
       <p>Vente directe, Prise de rendez-vous, Phonning, Orgnisation de tournées sur trois départements.</p>
@@ -70,7 +74,7 @@
       <hr/>
   </article>  
 
-  <article role="complementary" class="col-xs-12 col-sm-6 col-md-4 hobbies">
+  <article role="article" class="col-xs-12 col-sm-6 col-md-4 hobbies">
     <h2>DIVERS</h2>
     <h3>Hobbies</h3>
       <p>Snowboard</p>
