--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/style.css" rel="stylesheet" media="screen">  
 
     <title>Julie Alary || Portfolio</title>
-    <meta name="description" content="Page d'accueil de mon portfolio : je suis actuellement une formation de Webdeveloppeur à l'école Objectif 3W. J'apprends les langages Php, Html, Css, javaScript..." />
+    <meta name="description" content="Accueil de mon portfolio : je suis actuellement une formation de Webdeveloppeur à l'école Objectif 3W. J'apprends les langages Php, Html, Css, javaScript..." />
     <!--[if lt IE 9]>
       <link rel="stylesheet" type="text/css"href="ie-lt9.css">
       <script type="text/javascript" src="js/html5shiv.js"</script>
