--- a/site_wordpress.html
+++ b/site_wordpress.html
@@ -7,7 +7,8 @@
     <link href="css/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" href="asset/font-awesome/css/font-awesome.min.css">
     <link href="css/style_wordpress.css" rel="stylesheet" media="screen">
-      <title>"Julie Alary Personal One Page Site || Création Site Wordpress"</title>
+      <title>"Julie Alary || Création Site Wordpress"</title>
+      <meta name="description" content="Page de présentation de projet de création de site Wordpress pour une association : Syrien ne bouge agissons"
     <!--[if lt IE 9]>
       <link rel="stylesheet" type="text/css"href="ie-lt9.css">
       <script type="text/javascript" src="js/html5shiv.js"</script>
