--- a/cv.html
+++ b/cv.html
@@ -94,7 +94,7 @@
 </section>
 
     <div class="col-md-6 col-md-offset-3 text-center">
-        <a class="btn btn-default btn-lg" href="CV_Julie_Alary_2016-2017.pdf" role="button">Télécharger le cv</a>
+        <a class="btn btn-default btn-lg" href="CV-julie-alary.pdf" role="button">Télécharger le cv</a>
     </div>
         
     <div class="row arrow_cv">
