--- a/cv.html
+++ b/cv.html
@@ -99,7 +99,7 @@
         
     <div class="row arrow_cv">
             <div class="col-md-4 col-md-offset-4 text-center">
-                <a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i><i class="fa fa-home" aria-hidden="true"></i></a>
+                <a href="index.html"><i class="fa fa-arrow-left" aria-hidden="true"></i></a>
             </div>
     </div>
 
